--- a/html/browser/common.css
+++ b/html/browser/common.css
@@ -1,66 +1,76 @@
-body 
-{ 
+body
+{
 	padding: 0;
 	margin: 0;
-	background-color: #272727;
+	background-color: #090909;
 	font-size: 12px;
-	color: #ffffff;
+	color: #aaaaaa;
 	line-height: 170%;
+
+	scrollbar-face-color: #242424;
+	scrollbar-arrow-color: #242424;
+	scrollbar-track-color: #090909;
+	scrollbar-3dlight-color: #080808;
+	scrollbar-darkshadow-Color: #080808;
 }
 
 hr
 {
-	background-color: #40628a;
-	height: 1px;
+	height: 0;
+	border: 1px solid #000;
+	border-bottom: 1px solid #151515;
 }
 
-a, a:link, a:visited, a:active, .linkOn, .linkOff
-{ 
-	color: #ffffff; 
+a, button, a:link, a:visited, a:active, .linkOn, .linkOff
+{
+	color: #f4f4ff;
+	font-weight: 100;
 	text-decoration: none;
-	background: #40628a;
-	border: 1px solid #161616;
-	padding: 1px 4px 1px 4px;
+	background: #090909;
+	border: 1px solid rgba(55, 55, 55, 0.5);
+	border-radius: 3px;
+	padding: 2px 6px 2px 6px;
+	line-height: 1.9;
 	margin: 0 2px 0 0;
 	cursor:default;
-	white-space:nowrap;
 }
 
-a:hover 
-{ 
-	color: #40628a;
-	background: #ffffff;
+a:hover
+{
+	color: #000000;
+	background: #f4f4ff;
 }
 
 a.white, a.white:link, a.white:visited, a.white:active
-{ 
-	color: #40628a; 
+{
+	color: #000000;
 	text-decoration: none;
-	background: #ffffff;
-	border: 1px solid #161616;
+	background: #f4f4ff;
+	border: 1px solid rgba(55, 55, 55, 0.5);
 	padding: 1px 4px 1px 4px;
 	margin: 0 2px 0 0;
 	cursor:default;
 }
 
-a.white:hover 
-{ 
-	color: #ffffff;
-	background: #40628a;
+a.white:hover
+{
+	color: #000000;
+	background: #f4f4ff;
 }
 
 .linkOn, a.linkOn:link, a.linkOn:visited, a.linkOn:active, a.linkOn:hover
-{ 
-	color: #ffffff; 
-	background: #2f943c;
-	border-color: #24722e;
+{
+	color: #000000;
+	font-weight: bold;
+	background: #f4f4ff;
+	border-color: #f4f4ff;
 }
 
 .linkOff, a.linkOff:link, a.linkOff:visited, a.linkOff:active, a.linkOff:hover
-{ 
-	color: #ffffff; 
-	background: #999999;
-	border-color: #666666;
+{
+	color: #aaaaaa;
+	background: #242424;
+	border-color: rgba(55, 55, 55, 0.5);
 }
 
 a.icon, .linkOn.icon, .linkOff.icon
@@ -77,7 +87,6 @@ a.icon img, .linkOn.icon img
 	width: 18px;
 	height: 18px;
 }
-
 ul
 {
 	padding: 4px 0 0 10px;
@@ -90,16 +99,16 @@ li
 	padding: 0 0 2px 0;
 }
 
-img, a img 
-{ 
-	border-style:none; 
+img, a img
+{
+	border-style:none;
 }
 
 h1, h2, h3, h4, h5, h6
 {
 	margin: 0;
-	padding: 16px 0 8px 0; 
-	color: #517087;
+	padding: 8px 0 8px 0;
+	color: #A2ACB7;
 }
 
 h1
@@ -127,37 +136,19 @@ h4
 
 	width: 100%;
 	height: 100%;
-	padding-top:32px;
 }
 
 .uiTitle
 {
 	clear: both;
-	padding: 6px 8px 6px 8px;
-	border-bottom: 2px solid #161616;
-	background: #383838;
-	color: #98B0C3;
-	font-size: 16px;
+	padding: 4px 8px 6px 8px;
+	border-bottom: 1px solid #121212;
+	background: #050505;
+	color: #f4f4ff;
+	font-size: 20px;
+	font-family: Tahoma, sans-serif;
+	text-shadow: 1px 0 0 #ff0000, -1px 0 0 #00ffff;
 }
-
-.uiTitleWrapper
- {
- 	position:fixed;
- 	top:0px;
- 	left:0px;
- 	right:0px;
- 	z-index: 10
- }
- 
- .uiTitleButtons
- {
- 	position:fixed;
- 	top:0px;
- 	right:0px;
- 	height:32px;
- 	z-index:11;
- }
-
 
 .uiTitle.icon
 {
@@ -167,7 +158,7 @@ h4
 }
 
 .uiContent
-{	
+{
 	clear: both;
 	padding: 8px;
 	font-family: Verdana, Geneva, sans-serif;
@@ -201,28 +192,19 @@ h4
 .notice
 {
 	position: relative;
-	background: #E9C183;
-	color: #15345A;
+	background: #f4f4ff;
+	color: #000000;
+	font-weight: bold;
 	font-size: 12px;
-    font-style: italic;
-    font-weight: bold;
-	padding: 2px 4px 0 4px;
+	font-style: italic;
+	border: 1px solid #f4f4ff;
+	border-radius: 3px;
+	padding: 3px 6px 4px 6px;
 	margin: 4px;
 }
 
-.danger
-{
-	color: #ff0000;	
-	font-weight: bold;
-}
-.warning
-{
-	color: #ff0000;	
-	font-style: italic;
-}
-
 .notice.icon
-{	
+{
 	padding: 2px 4px 0 20px;
 }
 
@@ -242,28 +224,33 @@ div.notice
 
 .statusDisplay
 {
-	background: #000000;
-	color: #ffffff;
-	border: 1px solid #40628a;
+	background: #030303;
+	color: #aaaaaa;
+	border: 1px solid rgba(55, 55, 55, 0.5);
 	padding: 4px;
 	margin: 3px 0;
 }
 
-.statusDisplayItem {
-    background: #000000;
-    color: #ffffff;
-    border: 1px solid #40628a;
-    padding: 1px;
-    margin: 0px 4px;
+.statusLabel
+{
+	width: 138px;
+	float: left;
 	overflow: hidden;
+	color: #98B0C3;
+}
+
+.statusValue
+{
+	float: left;
 }
 
 .block
 {
 	padding: 8px;
 	margin: 10px 4px 4px 4px;
-	border: 1px solid #40628a;
-	background-color: #202020;
+	border: 1px solid rgba(55, 55, 55, 0.5);
+	color: #aaa;
+	background-color: #050505;
 }
 
 .block h3
@@ -285,31 +272,31 @@ div.notice
 {
 	width: 100%;
 	height: 100%;
-	background: #40628a;
+	background: #f4f4ff;
 	overflow: hidden;
 }
 
 .progressFill.good
 {
-	color: #ffffff;
+	color: #aaaaaa;
 	background: #00ff00;
 }
 
 .progressFill.average
 {
-	color: #ffffff;
+	color: #aaaaaa;
 	background: #d09000;
 }
 
 .progressFill.bad
 {
-	color: #ffffff;
+	color: #aaaaaa;
 	background: #ff0000;
 }
 
 .progressFill.highlight
 {
-	color: #ffffff;
+	color: #aaaaaa;
 	background: #8BA5C4;
 }
 
@@ -334,22 +321,151 @@ div.notice
 	clear: both;
 }
 
-.statusDisplay
-{
-	background: #000000;
-	color: #ffffff;
-	border: 1px solid #40628a;
-	padding: 4px;
-	margin: 3px 0;
+
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 50px;
+	height: 26px;
 }
 
-.roleDescription
+.switch input {display:none;}
+
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #383838;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 18px;
+	width: 18px;
+	left: 4px;
+	bottom: 4px;
+	background-color: #98B0C3;
+	transition: .4s;
+}
+
+.slider.red:before {
+	background-color: #d6858b;
+}
+
+.slider.locked:before {
+	content: url("padlock.png");
+	background-color: #b4b4b4;
+}
+
+input:checked + .slider {
+	background-color: #f4f4ff;
+}
+
+input:checked + .slider.red {
+	background-color: #a92621;
+}
+
+input:checked + .slider.locked {
+	background-color: #707070;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1px #2196F3;
+}
+
+input:focus + .slider.red {
+	box-shadow: 0 0 1px #f3212d;
+}
+
+input:focus + .slider.locked {
+	box-shadow: 0 0 1px #979797;
+}
+
+input:checked + .slider:before {
+	transform: translateX(24px);
+}
+
+.switch span {
+	display: inline-block;
+	position: relative;
+	width: 60px;
+	margin-left: 60px;
+}
+
+ul.sparse {
+	padding-bottom:20px;
+}
+
+.sparse li {
+	margin-top: 2px;
+}
+
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
+}
+
+.severity {
+	margin:0px;
+	padding: 1px 8px 1px 8px;
+	border-radius: 25px;
+	border: 1px solid #161616;
+	background: #f4f4ff;
+	color: #aaaaaa;
+}
+
+.severity img {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.metamag .metaitem td {
+	background: #050505;
+	padding: 8px;
+	border-top: 1px solid #121212;
+	border-left: 1px solid #101010;
+}
+
+.metamag .buyed td {
+	background: #090909;
+	padding: 8px;
+	border-top: 1px solid #151515;
+	border-left: 1px solid #252525;
+}
+
+.metamag .metaitem .metaprice {
+	text-align: center;
+	font-size: 16px;
+	vertical-align: middle;
+}
+
+.metamag .metaitem img {
+	vertical-align: middle;
+}
+
+.metamag .bal {
+	font-size: 16px;
+	vertical-align: middle;
+}
+
+a.rs_butt:hover
 {
-	background: #000000;
-	color: #ffffff;
-	border: 1px solid #40628a;
-	padding: 4px;
-	margin: 3px 0;
-	font-family: verdana;
-	line-height: 140%;
+	background: #000;
+}
+
+.role_col {
+	padding: 1px;
+	background: #050505;
+	border: 1px solid #333333;
+	border-bottom: 3px solid #222222;
+	border-radius: 1px;
+	margin: 0;
 }
