--- a/nano/templates/jukebox.tmpl
+++ b/nano/templates/jukebox.tmpl
@@ -10,7 +10,7 @@ Used In File(s): \code\game\machinery\jukebox.dm
 </div>
 
 <H3><span class="white">Available tracks:</span></H3>
-<div class="itemContent">
+<div class="itemContentfw">
     {{for data.tracks}}
         <div class="item">
             {{:helper.link( value.track, 'gear', {'change_track' : 1, 'title' : value.track}, value.track == data.current_track ? 'disabled' : null, null)}}    
