--- a/nano/css/shared.css
+++ b/nano/css/shared.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     font-size: 12px;
-    color: #ffffff;
+    color: #aaaaaa;
     line-height: 170%;
     font-family: Verdana, Geneva, sans-serif;
     background: #272727;
@@ -35,7 +35,7 @@ body {
 }
 
 hr {
-    background-color: #40628a;
+    background-color: #e8f0f8;
     height: 1px;
 }
 
@@ -46,12 +46,13 @@ hr {
     text-align: center;
     color: #ffffff;
     text-decoration: none;
-    background: #40628a;
-    border: 1px solid #161616;
-    padding: 0px 4px 4px 4px;
     margin: 0 2px 2px 0;
     cursor: default;
     white-space: nowrap;
+	background: #090909;
+	border: 1px solid rgba(55, 55, 55, 0.5);
+	border-radius: 3px;
+	padding: 2px 6px 2px 6px;
 }
 
 .linkFaintBackground {
@@ -67,7 +68,8 @@ hr {
 }
 
 a:hover, .zoomLink:hover, .linkActive:hover {
-    background: #405a8c;
+	color: #000000;
+	background: #f4f4ff;
 }
 
 .linkFaintBackground:hover {
@@ -80,7 +82,7 @@ a:hover, .zoomLink:hover, .linkActive:hover {
 }
 
 a.white, a.white:link, a.white:visited, a.white:active {
-    color: #40628a;
+    color: #e8f0f8;
     text-decoration: none;
     background: #ffffff;
     border: 1px solid #161616;
@@ -91,7 +93,7 @@ a.white, a.white:link, a.white:visited, a.white:active {
 
 a.white:hover {
     color: #ffffff;
-    background: #40628a;
+    background: #e8f0f8;
 }
 
 .hidden {
@@ -277,7 +279,7 @@ div.notice {
     width: 100%;
     margin: 4px 0 0 0;
     clear: both;
-	overflow: auto;
+	overflow: hidden;
 }
 
 .flexContainer {
@@ -294,8 +296,11 @@ div.notice {
     display: flex;
 }
 
-.itemContentNarrow, .itemContent {
-    float: left;
+.itemContentNarrow, .itemContent, .itemContentfw {
+    float: right;
+	border: 1px solid rgba(55, 55, 55, 0.5);
+    background: #121212;
+	border-radius: 3px;
 }
 
 .itemContentNarrow {
@@ -304,6 +309,10 @@ div.notice {
 
 .itemContent {
     width: 69%;
+}
+
+.itemContentfw {
+    width: 100%;
 }
 
 .itemLabelNarrow, .itemLabel, .itemLabelWide, .itemLabelWider, .itemLabelWidest {
@@ -358,26 +367,27 @@ div.notice {
 }
 
 .statusDisplay {
-    background: #000000;
+    background: #050505;
     color: #ffffff;
-    border: 1px solid #40628a;
+    border: 1px solid #e8f0f8;
     padding: 4px;
     margin: 3px 0;
 	overflow: hidden;
+    border-radius: 3px;
 }
 
 .statusDisplayItem {
-    background: #000000;
+    background: #050505;
     color: #ffffff;
-    border: 1px solid #40628a;
+    border: 1px solid #e8f0f8;
     padding: 1px;
     margin: 0px 4px;
     overflow: hidden;
 }
 .statusDisplayRecords {
-    background: #000000;
+    background: #050505;
     color: #ffffff;
-    border: 1px solid #40628a;
+    border: 1px solid #e8f0f8;
     padding: 4px;
     margin: 3px 0;
     overflow-x: hidden;
@@ -392,7 +402,7 @@ div.notice {
 	border-top: 0 none;
 	border-left: 0 none;
 	border-right: 0 none;
-	border-bottom: 2px inset #40628a;
+	border-bottom: 2px inset #e8f0f8;
     margin: 3px 0;
 	overflow: hidden;
 }
@@ -411,7 +421,7 @@ div.notice {
 .block {
     padding: 8px;
     margin: 10px 4px 4px 4px;
-    border: 1px solid #40628a;
+    border: 1px solid #e8f0f8;
     background-color: #202020;
 }
 
@@ -421,16 +431,16 @@ div.notice {
 
 .displayBar {
     position: relative;
-    width: 100%;
+    width: 99%;
     height: 16px;
-    border: 1px solid #40628a;
+    border: 1px solid #e8f0f8;
     float: left;
     margin: 0 5px 0 0;
     overflow: hidden;
     background: #000000;
 	line-height: 17px;
 	padding: 1px;
-	border: 1px solid #40628a;
+	border: 1px solid #e8f0f8;
 	background: #272727;
 }
 
@@ -444,8 +454,8 @@ div.notice {
 
 .displayBarFill {
     width: 0%;
-    height: 100%;
-    background: #40628a;
+    height: 99%;
+    background: #e8f0f8;
     overflow: hidden;
     float: left;
 }
@@ -458,7 +468,7 @@ div.notice {
     float: left;
     margin: 0 5px 0 0;
     overflow: hidden;
-	background: #40628a;
+	background: #e8f0f8;
 }
 
 .displayBarVerticalFill {
@@ -489,7 +499,7 @@ div.notice {
     float: left;
     margin: 0 5px 0 0;
     overflow: hidden;
-	background: #40628a;
+	background: #e8f0f8;
 }
 
 .displayBarBeakerFill {
@@ -781,7 +791,7 @@ th.bot {
 	width: 99%;
 	height: 590px;
 	overflow: hidden;
-	border: 1px solid #40628a;
+	border: 1px solid #e8f0f8;
 	background: url(nanomapBackground.png);
 }
 
